# scattering-simulation

./: .gitignore  CMakeLists.txt  Config.h.in  LICENSE  README.md
include/: arr_op.h  constants.h
include/classes/: framework.h  particle.h
include/functions/: scattering.h
include/integration/: runge_kutta.h
include/interactions/: constraints.h
include/tools/: input.h
src/: simulation.cpp
src/Physics/: Framework.java  Particle.java
src/classes/: CMakeLists.txt  framework.cpp  particle.cpp
src/functions/: CMakeLists.txt  scattering.cpp
src/interactions/: CMakeLists.txt  constraints.cpp  scattering.cpp
src/tools/: CMakeLists.txt  input.cpp  input.h
